// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker renders correctly 1`] = `
<div
  className="date-picker "
  onBlur={[Function]}
  onFocus={[Function]}
  tabIndex="0"
>
  <div
    className="selected-date-container"
  >
    <label />
    <input
      className="selected-date"
      readOnly={true}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`DatePicker renders correctly with focusIn 1`] = `
<div
  className="date-picker "
  onBlur={[Function]}
  onFocus={[Function]}
  tabIndex="0"
>
  <div
    className="selected-date-container"
  >
    <label />
    <input
      className="selected-date"
      readOnly={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="calendar"
  >
    <div
      className="heading"
    >
      <Arrow
        double={true}
        left={true}
        onClick={[Function]}
      />
      <Arrow
        left={true}
        onClick={[Function]}
      />
      <EditingDateInput
        currentDate={"1997-07-27T21:00:00.000Z"}
        editingUnit={null}
      />
      <Arrow
        onClick={[Function]}
      />
      <Arrow
        double={true}
        onClick={[Function]}
      />
    </div>
    <DaysChooser
      currentDate={"1997-07-27T21:00:00.000Z"}
      onDateChange={[Function]}
    />
  </div>
</div>
`;
